# clique

./: .gitignore  Cargo.toml  LICENSE  azure-pipelines.yml  rust-toolchain
.github/workflows/: rust-ci.yml
ci/: azure-rustfmt.yml
clique-cli/: Cargo.toml
clique-cli/src/: main.rs
clique-grpc/: Cargo.toml  build.rs
clique-grpc/proto/: clique.proto
clique-grpc/src/: client.rs  lib.rs  server.rs  transport.rs
clique-proto/: Cargo.toml
clique-proto/proto/: clique.proto
clique-proto/src/: lib.rs
clique-tonic/: Cargo.toml  build.rs
clique-tonic/proto/: clique.proto
clique-tonic/src/: lib.rs  server.rs  transport.rs
docs/: ROADMAP.md
integ-tests/: Cargo.toml
integ-tests/src/: main.rs
simulator/: Cargo.toml
simulator/src/: main.rs
src/: broadcast.rs  builder.rs  cluster.rs  common.rs  error.rs  event.rs  gossip.rs  handle.rs  join.rs  lib.rs  list.rs  membership.rs  messaging.rs  metadata_manager.rs  monitor.rs  node.rs  peer.rs  protocol.rs  rpc.rs  support.rs  test_utils.rs  transport.rs
src/consensus/: mod.rs  paxos.rs
src/membership/: cut_detector.rs  mod.rs  ring.rs  view.rs
src/monitor/: mod.rs  ping_pong.rs
src/node/: broadcast.rs  gossip.rs  mod.rs
src/protocol/: udp.rs
src/transport/: client.rs  mod.rs  proto.rs
tests/: cluster.rs
