[package]
name = "clique"
version = "0.1.0"
authors = [
  "Lucio Franco <luciofranco14@gmail.com>",
  "Bhargav Voleti <bhargav.voleti93@gmail.com>"
]
edition = "2018"
publish = false

[workspace]
members = ["clique-tonic"]

[dependencies]
bytes = "0.4"
futures = { version = "=0.3.0-alpha.18", package = "futures-preview", features = ["async-await", "nightly", "io-compat", "compat"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1.0"
tokio-sync = "=0.2.0-alpha.4"
tokio-timer = "=0.3.0-alpha.4"
twox-hash = "1.4"
rand = "0.7.0"
tracing = { version = "0.1", features = ["async-await"] }
tracing-futures = "0.0.0"
tracing-attributes = "0.1.0"
tracing-fmt = "0.1.1"

[dev-dependencies]
tokio = { version = "=0.2.0-alpha.4", features = ["rt-full"] }
