[package]
name = "clique"
version = "0.1.0"
authors = [
  "Lucio Franco <luciofranco14@gmail.com>",
  "Bhargav Voleti <bhargav.voleti93@gmail.com>"
]
edition = "2018"
publish = false

[workspace]
members = [
  # "clique-tonic",
  # "clique-cli",
  # "simulator",
  # "integ-tests"
]

[dependencies]
bytes = "0.4"
futures = "0.3"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1.0"
tokio = { version = "0.2.0", features=["sync", "time", "stream"] }
twox-hash = "1.4"
rand = "0.7.0"
tracing = { version = "0.1", features = ["async-await"] }
tracing-futures = "0.2"
tracing-attributes = "0.1"
tracing-fmt = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "0.2.0", features = ["full"] }
tracing-subscriber = "0.1"
