[package]
name = "clique-cli"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clique = { path = ".." }
clique-tonic = { path = "../clique-tonic" }
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3"
tracing-subscriber = { version = "0.2.0-alpha.2", features = ["tracing-log"] }
tracing-log = "0.1"