[package]
name = "clique-grpc"
version = "0.1.0"
authors = ["Bhargav Voleti <bhargav.voleti93@gmail.com>"]
edition = "2018"

[dependencies]
tower = "0.1"
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
hyper = "0.12"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-hyper"] }
tokio = "0.1"
futures = "0.1"
bytes = "0.4"
prost = "0.5"
log = "0.4"
pretty_env_logger = "0.3"
clique = { path = "../" }
http = "0.1"
tower-util = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-service = "0.2"
rand = "0.6"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc",  features = ["tower-hyper"]  }
