[package]
name = "clique-grpc"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
clique = { path = ".." }
bytes = "0.4"
futures03 = { version = "=0.3.0-alpha.17", package = "futures-preview", features = ["async-await", "nightly", "io-compat", "compat"] }
futures = { version = "0.1", package = "futures" } 
tower-grpc = { version = "0.1", features = ["tower-hyper"] }
tower-hyper = "0.1"
tokio-tcp = "0.1"
tower = "0.1"
hyper = "0.12"
tokio-sync = { git = "https://github.com/tokio-rs/tokio", features = ["async-traits"] }
tokio-executor = "0.1"
prost = "0.5"
pin-utils = "0.1.0-alpha.4"

[build-dependencies]
tower-grpc-build = { version = "0.1",  features = ["tower-hyper"]  }