[package]
name = "clique-proto"
version = "0.1.0"
authors = ["Bhargav Voleti <bhargav.voleti93@gmail.com>"]
edition = "2018"

[dependencies]
tower = { git = "https://github.com/tower-rs/tower" }
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
hyper = "0.12"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-hyper"] }
tokio = "0.1"
futures = "0.1"
bytes = "0.4"
prost = "0.5"
log = "0.4"
pretty_env_logger = "0.3"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc",  features = ["tower-hyper"]  }
