[package]
name = "clique-tonic"
version = "0.1.0"
authors = ["Bhargav Voleti <bhargav.voleti93@gmail.com"]
edition = "2018"
publish = false

[dependencies]
clique = { path = ".." }
tonic = "0.1.0-alpha.1"
prost = "0.5"
prost-derive = "0.5"
bytes = "0.4"
tokio = "=0.2.0-alpha.6"


[build-dependencies]
tonic-build = { version = "0.1.0-alpha.1", features=["rustfmt"]}
