[package]
name = "clique-tonic"
version = "0.1.0"
authors = ["Bhargav Voleti <bhargav.voleti93@gmail.com"]
edition = "2018"
publish = false

[dependencies]
clique = { path = ".." }
tonic = "0.1.0-beta.1"
prost = "0.5"
prost-derive = "0.5"
bytes = "0.4"
tokio = { version = "0.2.0", features=["full"] }
futures = "0.3"
uuid = { version = "0.7", features = ["v4"] }
tracing = "0.1"


[build-dependencies]
tonic-build = "0.1.0-beta.1"
