[package]
name = "simulator"
version = "0.1.0"
authors = ["Bhargav Voleti <voletibv@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clique = { path = ".."}
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["async-await", "io-compat", "compat"] }